Made some other changes and this should make sense

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h3 style="color:hsl(308, 92%, 48%)">Najidiyah</h3>
 <p>I am happy that am learning how to write code and now am learning how to flex css</p>
 <h4>I am excited that am learning how to write css as well</h4>
-<h5>Carry on you can be the world's best dev <br>
+<h5>Carry on you can be the world's best developer <br>
     😁🎉😁🎉
 </h5>
 </body>
